hphp/hack/test/typecheck/modules/internal_attribute_class.php.exp
File "internal_attribute_class.php--test2.php", line 2, characters 3-8:
Cannot access an internal element from module `foo` in the default module (Typing[4444])
  File "internal_attribute_class.php--test.php", line 3, characters 16-21:
  This is from module `foo`
